compiler/testData/diagnostics/tests/override/DefaultParameterValueInOverride.jet
open class A {
    open fun foo(a : Int) {}
}

class C : A() {
    override fun foo(a : Int = <!DEFAULT_VALUE_NOT_ALLOWED_IN_OVERRIDE!>1<!>) {
        super<A>.foo(a)
    }
}

class D : A() {
    override fun foo(b : Int = <!DEFAULT_VALUE_NOT_ALLOWED_IN_OVERRIDE!>1<!>) {
        super<A>.foo(b)
    }
}
